<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jiwai</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tip_ok">确定</string>
    <string name="tip_cancle">取消</string>
    <string name="tip_title">温馨提示</string>
    <string name="please_connect_network">请先连接网络!</string>
    <!-- comment -->
    <string name="comment_string">评论(%1$d)</string>
    <string name="comment_dialog_title">评论</string>
    <string name="comment_can_not_null">评论不能为空</string>
    <string name="comment_sending">正在发表评论...</string>
    <string name="comment_no_new">这会儿没评论哦！</string>
    <string name="comment_ok_btn">发表</string>
    <string name="comment_cancel_btn">取消</string>
    <!-- find content -->
    <string name="i_like">赞</string>
    <string name="share_string">分享</string>
    <string name="user_comment_string">用户评论</string>
    <string name="like_show">赞(%1$d)</string>
    <string name="more_comments">更多评论</string>
    <string name="no_more_comment">没有更多评论了</string>
    <string name="downloaded_path">叽歪</string>
    <string name="sd_card_no_existed">USB存储设备关闭后，才能使用此功能喔</string>
    <string name="recommend_str">推荐关注以下栏目</string>
    <string name="enter_great_world">进入新奇葩</string>
    <string name="named_by_yourself">给你自己取个名字吧</string>
    <string name="skip">Skip</string>
    <string name="il_collection_text">收藏</string>
    <string name="il_pic_text">照片</string>
    <string name="il_attention_text">关注</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="reload_tip">再给我一次机会吧^_^</string>
    <string name="loading">给我片刻，许你芳华……</string>
    <string name="get_list_failed">获取数据失败!</string>
    <string name="there_is_no_new_catalog_seeworld">亲，Len哥还没有更新最新的内容哦!</string>

    <!-- login -->
    <string name="login_password_hint">6到12位的密码</string>
    <string name="login_slogan">Hi!先来登录一下吧！</string>
    <string name="login_phone_hint">输入手机号</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="register_ver_code_hint">请输入验证码</string>
    <string name="register_password_hint">6到12位的密码</string>
    <string name="register_phone_hint">输入手机号</string>
    <string name="register_username_hint">昵称</string>
    <string name="new_password_hint">输入新密码</string>
    <string name="re_new_password_hint">再次输入密码</string>
    <string name="register_get_code_phone_hint">输入你的手机号码</string>
    <string name="register_declare">为了安全,我们会向你的手机发送验证码</string>

    <!-- update -->
    <string name="update_username_hint">昵称</string>
    <string name="update_introduce_hint">简介（最多128字）</string>
    <string name="update_grade_hint">年级</string>
    <string name="update_sex_hint">性别</string>
    <string name="update_email_hint">验证后可使用登陆</string>
    <string name="update_phone_hint">138****3425(已绑定)</string>

    <!-- ME -->
    <string name="default_user_name">我的名字不庸俗</string>
    <string name="default_introduce">在这写一句话，让更多人认识你</string>
    <!-- File Authority for the photo picker -->
    <string name="photo_file_provider_authority" translatable="false">com.sounuo.jiw.files</string>
    <string name="take_photo" msgid="7496128293167402354">"拍照"</string>
    <string name="take_new_photo" msgid="7341354729436576304">"拍摄新照片"</string>
    <string name="pick_photo" msgid="2129509985223564942">"选择照片"</string>

</resources>