<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_cancel_btn"
            />
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/comment_dialog_title"
            android:gravity="center"
            android:layout_weight="1"
            />
        <Button
        android:id="@+id/comment_btn"
        android:text="@string/comment_ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
        <EditText
    android:id="@+id/comment_edit"
    android:layout_width="match_parent"
    android:layout_height="@dimen/commnet_dialog_layout_comment_edit_height" />
    
</LinearLayout>