<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/read_content_webview_margin_bottom"/>
    <RelativeLayout
        android:id="@+id/tool_label"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seeworld_layout_relative_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/laber_bar_bg" >
        <TextView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/like_text_margin_right"
            android:drawableLeft="@drawable/ic_like"
            android:drawablePadding="@dimen/like_text_drawablePadding"
            android:gravity="center_vertical"
            android:text="@string/i_like"
            android:textColor="@color/like_text_color"
            android:textSize="@dimen/like_text_size" />

        <TextView
            android:id="@+id/user_comment_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/seeworld_layout_comment_text_margin_left"
            android:background="@color/user_comment_background_color"
            android:padding="@dimen/comment_text_padding"
            android:gravity="center"
            android:text="@string/user_comment_string"
            android:textColor="@color/user_comment_text_color"
            android:textSize="@dimen/seeworld_layout_comment_text_size" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/comment_text_margin_right"
            android:layout_toLeftOf="@+id/like"
            android:drawableLeft="@drawable/ic_comment"
            android:drawablePadding="@dimen/like_text_drawablePadding"
            android:gravity="center_vertical"
            android:text="@string/comment_string"
            android:textColor="@color/like_text_color"
            android:textSize="@dimen/like_text_size" />

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/share_text_margin_right"
            android:layout_toLeftOf="@+id/comment"
            android:drawableLeft="@drawable/ic_share"
            android:drawablePadding="@dimen/like_text_drawablePadding"
            android:text="@string/share_string"
            android:gravity="center"
            android:textColor="@color/like_text_color"
            android:textSize="@dimen/like_text_size" />
    </RelativeLayout>
    <!--  
        <ListView
            android:id="@+id/comment_list"
            android:layout_above="@id/tool_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
            -->
</RelativeLayout>